Ya se muestran las imagenes

--- a/trabajoViernes1311/src/app/modulos/libro/libro.component.html
+++ b/trabajoViernes1311/src/app/modulos/libro/libro.component.html
@@ -5,7 +5,8 @@
         <h3>{{libro.autor}}</h3>
         <p>{{libro.editorial}}</p>
         <p>{{libro.descripcion}}</p>
-        <!--<img ng-src="{{libro.img}}">-->
-        <img [src]="libro.img">
+        <!--<img src="modulos/libro/{{libro.img}}">-->
+        <img src="assets/{{libro.img}}">
+        <!--<img [src]="libro.img">-->
     </div>
 </div>
